--- a/package.json
+++ b/package.json
@@ -1,44 +1,16 @@
 {
-	"name": "unique-random-array",
-	"version": "3.0.0",
-	"description": "Get consecutively unique elements from an array",
-	"license": "MIT",
-	"repository": "sindresorhus/unique-random-array",
-	"funding": "https://github.com/sponsors/sindresorhus",
-	"author": {
-		"name": "Sindre Sorhus",
-		"email": "sindresorhus@gmail.com",
-		"url": "https://sindresorhus.com"
-	},
-	"type": "module",
-	"exports": "./index.js",
-	"engines": {
-		"node": ">=12"
-	},
-	"scripts": {
-		"test": "xo && ava && tsd"
-	},
-	"files": [
-		"index.js",
-		"index.d.ts"
-	],
-	"keywords": [
-		"unique",
-		"random",
-		"number",
-		"single",
-		"generate",
-		"non-repeating",
-		"array",
-		"item",
-		"element"
-	],
-	"dependencies": {
-		"unique-random": "^3.0.0"
-	},
-	"devDependencies": {
-		"ava": "^3.15.0",
-		"tsd": "^0.14.0",
-		"xo": "^0.38.2"
-	}
+  "name": "learning-npm",
+  "version": "1.0.0",
+  "description": "I am learning about npm",
+  "main": "npm.html",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Deepika",
+  "license": "ISC",
+  "dependencies": {
+    "sillyname": "^0.1.0",
+    "superheroes": "^4.0.0"
+  }
 }
