--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "learning-npm",
+  "name": "expressprac",
   "version": "1.0.0",
-  "description": "I am learning about npm",
-  "main": "npm.html",
-  "type": "module",
+  "main": "index.js",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Deepika",
+  "keywords": [],
+  "author": "DEEPIKA",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "sillyname": "^0.1.0",
-    "superheroes": "^4.0.0"
+    "express": "^4.19.2"
   }
 }
